refactor: use Path.of() instead of Paths.get()
Path.of() is the preferred factory method since Java 11.
Paths.get() simply delegates to Path.of() and is
effectively deprecated in modern Java.